syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.demo.hms.grpc";
option java_outer_classname = "HMSService";

service HealthService {
  rpc sendHealthMetrics (HealthMetrics) returns (HealthMetricsResponse) {}
}

message HealthMetrics{
	string status = 1;
	int32 memoryUsed = 2;
	int32 diskUsed = 3;
	int64 timestamp = 4;
}

message HealthMetricsResponse {
  string status = 1;
}
